--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -100,17 +100,76 @@ li {
 /*for wrapper*/
 .wrapper {
   max-width: 1360px;
-  width: 86%; 
+  width: 97%;
   margin: 0 auto;
 }
+
+/*=================================
+  Custom styling starts here
+=================================*/
+
+:root {
+  --black-color: #000;
+  --white-color: #fff;
+  --underline-color: #CCCCCC;
+  --darkgray-color: #616161;
+  --footer-color: #F1F1F1;
+}
+
+.display-none { display: none; }
+
+/*=================================
+  Custom styling ended here
+=================================*/
+
 /*=================================
   Header styling starts here
 =================================*/
 
+header .wrapper { width: 100%; }
 
+.menu-list {
+  display: flex;
+  justify-content: space-between;
+  background-color: var(--footer-color);
+}
 
+.menu {
+  text-align: center;
+  width: 100%;
+}
 
+.menu-list a {
+  font-size: 23px;
+  display: block;
+  color: var(--black-color);
+  padding: 4.5% 0;
+}
 
+.menu-list a:hover {
+  background-color: #616161;
+  color: var(--white-color);
+}
+
+.main-title {
+  width: 97%;
+  margin: 0 auto;
+  padding: 5.3% 0 3.2%;
+}
+
+h1 a {
+  font-size: 48px;
+  color: var(--black-color);
+  font-weight: bold;
+}
+
+.template-by {
+  font-size: 19px;
+  display: block;
+  padding-top: 2.4%;
+}
+
+.template-by a { color: var(--black-color); }
 
 /*=================================
   Header styling ends here
@@ -120,11 +179,267 @@ li {
   main styling starts here
 =================================*/
 
+/* banner section started here */
 
+.slider li { width: 100%; }
+figure { position: relative; }
 
+figcaption {
+  position: absolute;
+  right: 1.4%;
+  top: 4.5%;
+  font-size: 20px;
+  background-color: var(--white-color);
+  padding: 1.3% 2.3%;
+}
 
+.slider-action {
+  background-color: var(--darkgray-color);
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1.5% 0;
+}
 
+.slider-action .next-button,
+.slider-action .previous-button {
+  text-indent: -9999px;
+  display: block;
+  width: fit-content;
+  color: var(--white-color);
+}
 
+.previous-button { margin-left: 9%; }
+.next-button { margin: 0 9% 0 auto; }
+
+.previous-button:hover::before,
+.next-button:hover::before {
+  color: var(--black-color);
+  background-color: var(--white-color);
+  border-radius: 50%;
+}
+
+.slider-action .next-button::before,
+.slider-action .previous-button::before {
+  font-family: 'FontAwesome';
+  text-indent: 0;
+  font-size: 29px;
+  float: left;
+}
+
+.slider-action .previous-button::before { content: '\f0a8'; }
+.slider-action .next-button::before { content: '\f0a9'; }
+
+.slider-action li {
+  width: 20%;
+  text-align: center;
+}
+
+.dot {
+  font-size: 0;
+  padding: 3.3%;
+  margin: 1px;
+  border: 1px solid var(--white-color);
+  transition: background-color .5s ease-in-out;
+}
+
+.dot:hover {
+  background-color: var(--white-color);
+}
+
+.slide-active { background-color: var(--white-color); }
+
+/* banner section started here */
+
+/* what we offer section started here */
+
+.what-we-offer { padding: 6.9% 0 7.7%; }
+.offer-box {
+  display: flex;
+  padding-top: 4.6%;
+}
+li.Design { background-color: var(--footer-color); }
+li.Branding { background-color: #BBBBBB; }
+
+li.Consultation {
+  background-color: #616161;
+  color: var(--white-color);
+}
+li.Promises {
+  background-color: var(--black-color);
+  color: var(--white-color);
+}
+
+.offer-box li { padding: 3.2% 1.6%; }
+.offer-box h3 { font-size: 32px; }
+
+.offer-box p {
+  font-size: 20px;
+  line-height: 1.5;
+  padding-top: 8%;
+}
+
+/* what we offer section started here */
+
+/* pricing plan section started here */
+
+.pricing-plans p {
+  font-size: 20px;
+  padding: 2.1% 0 3.5%;
+  text-align: center;
+}
+
+.price-card {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  border: 1px solid #D1D1D1;
+}
+
+.price-card li {
+  border: 1px solid #D1D1D1;
+  line-height: 3.5;
+  font-size: 20px;
+}
+
+.price-card li:last-child {
+  background-color: var(--footer-color);
+  line-height: 6;
+}
+
+.price-card {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
+.plans-price {
+  display: block;
+  font-size: 41px;
+  letter-spacing: 5px;
+  line-height: 1;
+  padding-top: 10.8%;
+}
+
+.signup-button {
+  color: var(--white-color);
+  background-color: #4CAF50;
+  display: initial;
+  padding: 4.7% 6.8%;
+  border: none;
+  outline: none;
+}
+
+.price-card h4 {
+  font-size: 30px;
+  background-color: var(--black-color);
+  color: var(--white-color);
+  text-align: center;
+  line-height: 4.3;
+}
+
+.bold { font-weight: bold; }
+
+.price-pro h4 { background-color: #616161; }
+
+/* pricing plan section ended here */
+
+/* who we are section started here */
+
+.who-we-are {padding: 8.3% 0;}
+
+.outter-box {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 4.7%;
+}
+
+.inner-box { flex-basis: 32.2%; }
+
+.who-we-are .inner-box { box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.5); }
+
+.content { padding: 5%; }
+.content h5 { font-size: 30px; }
+
+.content span {
+  display: block;
+  font-size: 19px;
+  color: #75727A;
+  padding: 8% 0 6.5%;
+}
+
+.who-we-are p {
+  line-height: 1.5;
+  font-size: 19px;
+}
+
+.contact-button {
+  font-size: 20px;
+  color: var(--black-color);
+  width: 100%;
+  line-height: 2.6;
+  margin-top: 16px;
+  text-align: center;
+  background-color: var(--footer-color);
+}
+
+/* who we are section started here */
+
+/* contact section started here */
+
+.contact-us { text-align: center; }
+
+.pricing-plans h3,
+.what-we-offer h2,
+.who-we-are h4,
+.contact-us h5 {
+  font-size: 32px;
+  width: fit-content;
+  margin: 0 auto;
+}
+
+.what-we-offer h2::after,
+.who-we-are h4::after,
+.contact-us h5::after {
+  content: '';
+  width: auto;
+  display: block;
+  margin-top: 18px;
+  padding: 2%;
+  background-color: var(--underline-color);
+}
+
+form { padding: 4% 0 8%; }
+
+.form-group {
+  text-align: left;
+  padding-top: 2.5%;
+}
+
+.form-group:last-child { padding-top: 1.6%; }
+
+label {
+  display: block;
+  font-size: 19px;
+}
+
+.form-content {
+  width: 100%;
+  line-height: 2.6;
+  font-size: 18px;
+  border: 1px solid var(--underline-color);
+  outline: none;
+}
+
+.send-button {
+  background-color: var(--black-color);
+  color: var(--white-color);
+  width: 100%;
+  line-height: 2.5;
+  font-size: 18px;
+}
+/* contact section ended here */
 
 
 /*=================================
@@ -135,9 +450,62 @@ li {
   footer styling starts here
 =================================*/ 
 
+footer {
+  background-color: var(--footer-color);
+  padding-top: 4.6%;
+  text-align: center;
+}
 
+h6 {
+  font-size: 26px;
+  padding-bottom: 2.8%;
+}
 
+.rocket-button {
+  background-color: var(--black-color);
+  color: var(--white-color);
+  font-size: 19px;
+  padding: 14px 25px;
+}
 
+.rocket-button::before {
+  content: '\f062';
+  font-family: 'FontAwesome';
+  float: left;
+  margin-right: 20px;
+}
+
+.social-links { padding-top: 4%; }
+
+.social-icon a {
+  text-indent: -9999px;
+  color: var(--black-color);
+}
+
+.social-icon a::before {
+  font-family: 'FontAwesome';
+  text-indent: 0;
+  font-size: 29px;
+  float: left;
+  margin: 0 1px;
+}
+
+.social-icon:nth-child(1) a::before { content: '\f082';}
+.social-icon:nth-child(2) a::before { content: '\f16d';}
+.social-icon:nth-child(3) a::before { content: '\f2ab';}
+.social-icon:nth-child(4) a::before { content: '\f231';}
+.social-icon:nth-child(5) a::before { content: '\f099';}
+.social-icon:nth-child(6) a::before { content: '\f0e1';}
+
+footer p {
+  font-size: 19px;
+  padding: 2.7% 0 3.6%;
+}
+
+footer p a {
+  text-decoration: underline;
+  color: var(--black-color);
+}
 
 
 
